{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 52,
  "lineage": "c99938f9-d62c-d89e-34a6-bf5a1372170d",
  "resources": [
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0801153d954ff6f7d",
            "domain": "vpc",
            "id": "eipalloc-0801153d954ff6f7d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-54-11-41.compute-1.amazonaws.com",
            "public_ip": "52.54.11.41",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3436e8df604c2cf",
            "domain": "vpc",
            "id": "eipalloc-0c3436e8df604c2cf",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-233-213-201.compute-1.amazonaws.com",
            "public_ip": "3.233.213.201",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7d00f14f5948ed2",
            "domain": "vpc",
            "id": "eipalloc-0a7d00f14f5948ed2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-158-175-180.compute-1.amazonaws.com",
            "public_ip": "54.158.175.180",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490793556370:internet-gateway/igw-01d6c8d2704483d24",
            "id": "igw-01d6c8d2704483d24",
            "owner_id": "490793556370",
            "vpc_id": "vpc-015dc43d494143cac"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0801153d954ff6f7d",
            "connectivity_type": "public",
            "id": "nat-040858eb3ed761a78",
            "network_interface_id": "eni-0467a601fcb0ed725",
            "private_ip": "10.10.11.133",
            "public_ip": "52.54.11.41",
            "subnet_id": "subnet-094c05ef7aa48c6f9"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_eip.this",
            "module.centralised_log_monitoring.aws_internet_gateway.this",
            "module.centralised_log_monitoring.aws_subnet.public",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3436e8df604c2cf",
            "connectivity_type": "public",
            "id": "nat-0f5cfa29521fe0ba4",
            "network_interface_id": "eni-0da126bd5403f85ed",
            "private_ip": "10.10.12.246",
            "public_ip": "3.233.213.201",
            "subnet_id": "subnet-0b2950bcef63551e1"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_eip.this",
            "module.centralised_log_monitoring.aws_internet_gateway.this",
            "module.centralised_log_monitoring.aws_subnet.public",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7d00f14f5948ed2",
            "connectivity_type": "public",
            "id": "nat-023c17f45275e498f",
            "network_interface_id": "eni-017a0465e0494f825",
            "private_ip": "10.10.13.171",
            "public_ip": "54.158.175.180",
            "subnet_id": "subnet-06096cb46d3551ab6"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_eip.this",
            "module.centralised_log_monitoring.aws_internet_gateway.this",
            "module.centralised_log_monitoring.aws_subnet.public",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dc52c2c3eb08ff681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-040858eb3ed761a78",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dc52c2c3eb08ff68",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.centralised_log_monitoring.aws_eip.this",
            "module.centralised_log_monitoring.aws_internet_gateway.this",
            "module.centralised_log_monitoring.aws_nat_gateway.this",
            "module.centralised_log_monitoring.aws_route_table.private",
            "module.centralised_log_monitoring.aws_subnet.public",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0403e5fc3a040a5bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f5cfa29521fe0ba4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0403e5fc3a040a5bd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.centralised_log_monitoring.aws_eip.this",
            "module.centralised_log_monitoring.aws_internet_gateway.this",
            "module.centralised_log_monitoring.aws_nat_gateway.this",
            "module.centralised_log_monitoring.aws_route_table.private",
            "module.centralised_log_monitoring.aws_subnet.public",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0835ab670dbfd8a2f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-023c17f45275e498f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0835ab670dbfd8a2f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.centralised_log_monitoring.aws_eip.this",
            "module.centralised_log_monitoring.aws_internet_gateway.this",
            "module.centralised_log_monitoring.aws_nat_gateway.this",
            "module.centralised_log_monitoring.aws_route_table.private",
            "module.centralised_log_monitoring.aws_subnet.public",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01d6c8d2704483d24",
            "id": "r-rtb-020cb4c03a7b151181080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-020cb4c03a7b15118",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.centralised_log_monitoring.aws_internet_gateway.this",
            "module.centralised_log_monitoring.aws_route_table.public",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490793556370:route-table/rtb-0dc52c2c3eb08ff68",
            "id": "rtb-0dc52c2c3eb08ff68",
            "owner_id": "490793556370",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015dc43d494143cac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490793556370:route-table/rtb-0403e5fc3a040a5bd",
            "id": "rtb-0403e5fc3a040a5bd",
            "owner_id": "490793556370",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015dc43d494143cac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490793556370:route-table/rtb-0835ab670dbfd8a2f",
            "id": "rtb-0835ab670dbfd8a2f",
            "owner_id": "490793556370",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015dc43d494143cac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490793556370:route-table/rtb-020cb4c03a7b15118",
            "id": "rtb-020cb4c03a7b15118",
            "owner_id": "490793556370",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Opensearch-vpc-route-tables-Openshift",
              "name": "public_sunet",
              "region": "nv"
            },
            "tags_all": {
              "Name": "Opensearch-vpc-route-tables-Openshift",
              "name": "public_sunet",
              "region": "nv"
            },
            "timeouts": null,
            "vpc_id": "vpc-015dc43d494143cac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d94b534c1d9a739",
            "route_table_id": "rtb-0dc52c2c3eb08ff68",
            "subnet_id": "subnet-00ad8f22d096f8a12"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_route_table.private",
            "module.centralised_log_monitoring.aws_subnet.private",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041ec325e6ef10441",
            "route_table_id": "rtb-0403e5fc3a040a5bd",
            "subnet_id": "subnet-04f6b90dfcc747df3"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_route_table.private",
            "module.centralised_log_monitoring.aws_subnet.private",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3dcb10c237a58fc",
            "route_table_id": "rtb-0835ab670dbfd8a2f",
            "subnet_id": "subnet-02d9f05b8cc7b2cfa"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_route_table.private",
            "module.centralised_log_monitoring.aws_subnet.private",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084a144f1e435cbbd",
            "route_table_id": "rtb-020cb4c03a7b15118",
            "subnet_id": "subnet-094c05ef7aa48c6f9"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_route_table.public",
            "module.centralised_log_monitoring.aws_subnet.public",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086610dbe35075680",
            "route_table_id": "rtb-020cb4c03a7b15118",
            "subnet_id": "subnet-0b2950bcef63551e1"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_route_table.public",
            "module.centralised_log_monitoring.aws_subnet.public",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044b2f0b515599886",
            "route_table_id": "rtb-020cb4c03a7b15118",
            "subnet_id": "subnet-06096cb46d3551ab6"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_route_table.public",
            "module.centralised_log_monitoring.aws_subnet.public",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "es_sec_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490793556370:security-group/sg-00ca8045f230d26b7",
            "description": "Allow the ENI that Kinesis Data Firehose created to make HTTPS calls",
            "egress": [],
            "id": "sg-00ca8045f230d26b7",
            "ingress": [],
            "name": "es-sec-grp",
            "name_prefix": "",
            "owner_id": "490793556370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "es-sec-grp"
            },
            "tags_all": {
              "Name": "es-sec-grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-015dc43d494143cac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kdf_sec_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490793556370:security-group/sg-0a28b3e97da2accd2",
            "description": "Allow control the data stream",
            "egress": [],
            "id": "sg-0a28b3e97da2accd2",
            "ingress": [],
            "name": "kdf-sec-grp",
            "name_prefix": "",
            "owner_id": "490793556370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kdf-sec-grp"
            },
            "tags_all": {
              "Name": "kdf-sec-grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-015dc43d494143cac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "es_sec_grp_rule_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2475953687",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00ca8045f230d26b7",
            "self": false,
            "source_security_group_id": "sg-0a28b3e97da2accd2",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.centralised_log_monitoring.aws_security_group.es_sec_grp",
            "module.centralised_log_monitoring.aws_security_group.kdf_sec_grp",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "es_sec_grp_rule_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-3365014463",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00ca8045f230d26b7",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.centralised_log_monitoring.aws_security_group.es_sec_grp",
            "module.centralised_log_monitoring.aws_security_group.kdf_sec_grp",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kdf_sec_grp_rule_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3161355523",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a28b3e97da2accd2",
            "self": false,
            "source_security_group_id": "sg-00ca8045f230d26b7",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.centralised_log_monitoring.aws_security_group.es_sec_grp",
            "module.centralised_log_monitoring.aws_security_group.kdf_sec_grp",
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490793556370:subnet/subnet-00ad8f22d096f8a12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-00ad8f22d096f8a12",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "490793556370",
            "tags": {
              "Tier": "private_subnet"
            },
            "tags_all": {
              "Tier": "private_subnet"
            },
            "vpc_id": "vpc-015dc43d494143cac"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490793556370:subnet/subnet-04f6b90dfcc747df3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-04f6b90dfcc747df3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "490793556370",
            "tags": {
              "Tier": "private_subnet"
            },
            "tags_all": {
              "Tier": "private_subnet"
            },
            "vpc_id": "vpc-015dc43d494143cac"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490793556370:subnet/subnet-02d9f05b8cc7b2cfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-02d9f05b8cc7b2cfa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "490793556370",
            "tags": {
              "Tier": "private_subnet"
            },
            "tags_all": {
              "Tier": "private_subnet"
            },
            "vpc_id": "vpc-015dc43d494143cac"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490793556370:subnet/subnet-094c05ef7aa48c6f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.11.0/24",
            "id": "subnet-094c05ef7aa48c6f9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "490793556370",
            "tags": {
              "Tier": "public_subnet"
            },
            "tags_all": {
              "Tier": "public_subnet"
            },
            "vpc_id": "vpc-015dc43d494143cac"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490793556370:subnet/subnet-0b2950bcef63551e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.12.0/24",
            "id": "subnet-0b2950bcef63551e1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "490793556370",
            "tags": {
              "Tier": "public_subnet"
            },
            "tags_all": {
              "Tier": "public_subnet"
            },
            "vpc_id": "vpc-015dc43d494143cac"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490793556370:subnet/subnet-06096cb46d3551ab6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.13.0/24",
            "id": "subnet-06096cb46d3551ab6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "490793556370",
            "tags": {
              "Tier": "public_subnet"
            },
            "tags_all": {
              "Tier": "public_subnet"
            },
            "vpc_id": "vpc-015dc43d494143cac"
          },
          "dependencies": [
            "module.centralised_log_monitoring.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.centralised_log_monitoring",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490793556370:vpc/vpc-015dc43d494143cac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-091c18b570090cec4",
            "default_route_table_id": "rtb-0eb2963fffccd6cd4",
            "default_security_group_id": "sg-0f94c418c921e2c1f",
            "dhcp_options_id": "dopt-0fb85af7ab6f12b73",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-015dc43d494143cac",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eb2963fffccd6cd4",
            "owner_id": "490793556370",
            "tags": {
              "name": "demo",
              "region": "nv"
            },
            "tags_all": {
              "name": "demo",
              "region": "nv"
            }
          }
        }
      ]
    }
  ]
}